--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
     "vite": "^5.0.2",
     "vite-plugin-mkcert": "^1.17.1",
     "vite-tsconfig-paths": "^4.2.1"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:anig1scur/gsap-examples.git",
+  "author": "anig1scur <anigiscur@gmail.com>",
+  "license": "MIT",
+  "packageManager": "yarn@4.0.2"
 }
