--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
+    "mouse-follower": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
+    "sass": "^1.69.5",
     "tilg": "^0.1.1"
   },
   "devDependencies": {
